Improved solution of this -> Fixed the bug where animation adds extra margin right to elements

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ html {
   overflow-x: hidden;
 }
 body {
-  overflow-x: hidden;
   background: #FFFFFF;
   font-family: 'Nunito Sans', sans-serif;
   color: #86868B;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Navigation */
